--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,87 +1,530 @@
-.browserupgrade {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
+@import "_variables.scss";
+
+$fa-font-path:  "../fonts";
+
+//vendor:
+@import "node_modules/bootstrap/scss/bootstrap.scss";
+@import "node_modules/@cmyee/pushy/scss/pushy.scss";
+@import "node_modules/components-font-awesome/scss/fontawesome.scss";
+@import "node_modules/components-font-awesome/scss/fa-solid.scss";
+@import "node_modules/components-font-awesome/scss/fa-brands.scss";
+@import "node_modules/components-font-awesome/scss/fa-regular.scss";
+@import "node_modules/mdi/scss/materialdesignicons.scss";
+//endvendor
+
+html {
+  font-size: 18px;
+  section, header, footer {
+    width: 100%;
+  }
+  color: $text-color;
 }
 
-/* Space out content a bit */
 body {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
+  margin: 0;
+  padding: 0;
+  background-color: $body-bg;
 }
 
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-  padding-right: 1rem;
-  padding-left: 1rem;
+.logo {
+  margin-top: $marginMobile;
+  &.interna {
+    margin-bottom: $marginMobile;
+    h1 {
+      margin: 0;
+    }
+  }
 }
 
-/* Custom page header */
-.header {
-  padding-bottom: 1rem;
-  border-bottom: .05rem solid #e5e5e5;
+#menu-full-page, #main-slide {
+  display: none;
 }
 
-/* Make the masthead heading the same height as the navigation */
-.header h3 {
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: 3rem;
+#section-logo {
+  display: none;
+  img {
+    margin-top: 15px;
+  }
 }
 
-/* Custom page footer */
-.footer {
-  padding-top: 1.5rem;
-  color: #777;
-  border-top: .05rem solid #e5e5e5;
+
+
+#section-divider {
+  margin-top: -7px;
 }
 
-/* Customize container */
-@media (min-width: 48em) {
+.divider {
+  display: block;
+  width: 100%;
+  height: 3px;
+  background-color: $palette-peterman;
+  margin-bottom: 1.875rem;
+  margin-top: 0.3125rem;
+  &.interna {
+    margin-top: 15px;
+    margin-bottom: 15px;
+    background-color: $palette-gris;
+    height: 1px;
+  }
+}
+
+.container {
+  background-color: #F8F8F8;
+}
+
+#container {
+
+
+  .menu-btn {
+    border: none;
+    font-size: 20px;
+    text-transform: uppercase;
+    background-color: transparent;
+    padding: 0;
+    margin-top: $marginMobile;
+    margin-bottom: $marginMobile;
+  }
+
+  h1 {
+    font-family: $font-family;
+    font-weight: 700;
+    font-size: $font-size-h1;
+    &.display-less {
+      font-size: $font-size-h1-less;
+    }
+    color: #999;
+  }
+
+  h2 {
+    font-family: $font-family;
+    font-weight: 400;
+    font-size: $font-size-h2;
+    color: $text-color;
+  }
+
+  h3 {
+    font-family: $font-family;
+    font-weight: 600;
+    font-size: $font-size-h3;
+    &.display-less {
+      font-size: $font-size-h3-less;
+    }
+    margin-bottom: 0;
+    color: $text-color;
+  }
+
+  p {
+    font-family: $font-family;
+    font-weight: 400;
+    font-size: $font-size-p;
+    &.display-less {
+      font-size: $font-size-p-less;
+    }
+    color: $text-color;
+  }
+
+  .privacy {
+    p {
+      color: white;
+    }
+    a {
+      color: white;
+    }
+  }
+
+}
+
+#main-slide {
+  z-index: 0;
+  position: absolute;
+  img {
+    max-height: 800px;
+    width: auto;
+    margin: 0 auto;
+  }
+}
+
+.navbar {
+  background-color: transparent;
+  font-size: 1rem;
+  font-weight: 600;
+  font-family: $font-family;
+
+}
+.navbar, .nav-link {
+  padding: 0;
+}
+
+.nav-item {
+  margin-left: 30px;
+}
+
+.sopra-slide {
+
+  .navbar {
+    text-transform: uppercase;
+  }
+
+  .navbar, .nav-link {
+    color: white;
+  }
+
+
+
+  .owl-prev, .owl-next {
+    background-color: transparent;
+    border: none;
+    background-repeat: no-repeat;
+    height: 70px;
+    width: 50px;
+  }
+  .owl-prev {
+    background-image: url("/images/arrow-l.png");
+    margin-right: 20px;
+    margin-left: -15px;
+  }
+  .owl-next {
+    background-image: url("/images/arrow-r.png");
+  }
+  .bottoni-main-slide {
+    position: absolute;
+    bottom: 50px;
+    display: none;
+  }
+}
+
+#chi-siamo {
+  img {
+    margin-top: 0.9375rem;
+  }
+}
+
+#descrizione {
+  h2 {
+    padding-top: 30px;
+    padding-bottom: 15px;
+  }
+}
+
+#panoramica {
+  display: block;
+  .container-fluid {
+    padding: 0;
+    overflow: hidden;
+    text-align: center;
+    img {
+      max-height: 300px;
+      width: auto;
+      margin-left: -50%;
+    }
+  }
+}
+
+#dettagli {
   .container {
-    max-width: 46rem;
+    padding-top: 2.813rem;
+    padding-bottom: 2.813rem;
+  }
+  label {
+    font-weight: 600;
   }
 }
-.container-narrow > hr {
-  margin: 2rem 0;
-}
 
-/* Main marketing message and sign up button */
-.jumbotron {
-  text-align: center;
-  border-bottom: .05rem solid #e5e5e5;
-}
-.jumbotron .btn {
-  padding: .75rem 1.5rem;
-  font-size: 1.5rem;
-}
-
-/* Supporting marketing content */
-.marketing {
-  margin: 3rem 0;
-}
-.marketing p + h4 {
-  margin-top: 1.5rem;
-}
-
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 48em) {
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-right: 0;
-    padding-left: 0;
+#gallery {
+  .col-md-5, .col-sm-12, .col-md-7 {
+    padding-bottom: 30px;
   }
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 2rem;
+}
+
+#ultime-news {
+  .container {
+    padding-top: 0.9375rem;
   }
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
+
+  .card {
+    margin-top: 1.125rem;
+    // box-shadow: 0 0.1875rem 0.375rem rgba(0,0,0,0.16), 0 0.1875rem 0.375rem rgba(0,0,0,0.23);
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  }
+  .card:hover {
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  }
+  .card-image {
+    height: 322px;
+    max-width: 100%;
+    position: relative;
+    overflow: hidden;
+    img {
+      position: absolute;
+      top: 0;
+      width: auto;
+      height: inherit;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+  }
+  .card-body {
+    position: relative;
+  }
+  .card-title-description {
+    margin: 0 calc(-1.125rem - 0.1875rem);
+    padding: 0 calc(1.125rem + 0.1875rem);
+    padding-bottom: 1.125rem;
+    border-bottom: 1px solid rgba(0,0,0,.333);
+  }
+  .body-text {
+    padding-top: 1.125rem;
+  }
+  .triangle-right {
+    width: 0;
+    height: 0;
+    border-top: 1.563rem solid transparent;
+    border-bottom: 1.563rem solid transparent;
+    border-left: 1.563rem solid gray;
+    -ms-transform: rotate(45deg); /* IE 9 */
+    -webkit-transform: rotate(45deg); /* Safari */
+    transform: rotate(45deg); /* Standard syntax */
+    position: absolute;
+    bottom: -0.6875rem;
+    right: 0.125rem;
+  }
+  .owl-stage-outer {
+    padding: 0.8rem;
+    margin: -0.8rem;
+    padding-bottom: 1.5rem;
+  }
+  .owl-carousel .owl-nav {
+    position: relative;
+  }
+  .owl-prev, .owl-next {
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 900;
+  }
+  .owl-carousel .owl-nav .owl-prev {
+    margin-right:10px;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  .owl-carousel .owl-nav .owl-next {
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+  .owl-next, .owl-prev {
+    margin-top: 0.125rem;
+    font-size: 1.875rem;
+  }
+  .mdi-plus-circle-outline:before {
+    font-size: 2.5rem;
+    margin-top: 0;
+  }
+  a {
+    color: $text-color;
+  }
+  .d-flex {
+    padding-bottom: 1rem;
+  }
+  #offerte-owl {
+    &.interna {
+      padding-bottom: 90px;
+    }
+  }
+}
+
+.no-margin-bottom {
+  margin-bottom: 0 !important;
+}
+
+#footer {
+    background-color: $palette-peterman;
+    .container {
+      background-color: $palette-peterman;
+    }
+    position: relative;
+    .contatti {
+      min-height: 400px;
+      padding-top: 3.875rem;
+      #social-mobile {
+        font-size: 2.5rem;
+        text-align: center;
+        margin-top: 3.875rem;
+        margin-bottom: 3.875rem;
+      }
+      .row {
+        margin-bottom: 1rem;
+      }
+      p {
+        margin-bottom: 0.25rem;
+      }
+
+      .col-md-2, .col-2 {
+        position: relative;
+        img {
+          height: 35px;
+          width: 35px;
+          position: absolute;
+          left: 50%;
+          top: 50%;
+          transform: translate(-50%, -50%);
+          &.social {
+            display: none;
+            left: 20%;
+            height: 45px;
+            width: 45px;
+          }
+        }
+      }
+    }
+    .mappa {
+      background-color: white;
+      height:484px;
+    //   padding-left: 15px;
+    //   padding-right: 15px;
+      #map {
+          width: 100%;
+          height: 100%;
+      }
+    }
+}
+.privacy {
+  background-color: $palette-gris;
+  .container {
+    background-color: $palette-gris;
+  }
+  color: white;
+  padding: 1rem 0;
+  p {
+    margin-bottom: 0;
+  }
+
+}
+
+
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) {
+  html {
+    font-size: 16px;
+  }
+  #panoramica {
+    .container-fluid {
+      img {
+        margin-left: -25%;
+      }
+    }
+  }
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+  html {
+    font-size: 18px;
+  }
+  #footer {
+      .contatti {
+          #social-mobile {
+            text-align: left;
+            margin-top: 1.5rem;
+          }
+      }
+      .mappa {
+        position:absolute;
+        top:0;
+        left:50%;
+        right:0;
+        height: 400px;
+        overflow: hidden;
+      }
+  }
+  #panoramica {
+    .container-fluid {
+      img {
+        max-height: 400px;
+      }
+    }
+  }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+  html {
+    font-size: 18px;
+  }
+  .menu-btn {
+    display: none;
+  }
+  #menu-full-page, #main-slide {
+    display: block;
+  }
+  #section-logo {
+    display: inline-block;
+    position: relative;
+  }
+  .sopra-slide {
+    height: 800px;
+    position: relative;
+    background-color: transparent;
+    .bottoni-main-slide {
+      display: inline-block;
+    }
+  }
+  #mapinterna {
+    height: 400px;
+  }
+  #footer {
+    .contatti {
+      #social-mobile {
+        display: none;
+      }
+      .col-md-2, .col-2 {
+        img {
+          &.social {
+            display: inline-block;
+          }
+        }
+      }
+    }
+    .mappa {
+      height: 400px;
+    }
+  }
+  #panoramica {
+    .container-fluid {
+      img {
+        max-height: 500px;
+      }
+    }
+  }
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+  html {
+    font-size: 20px;
+  }
+  #panoramica {
+    .container-fluid {
+      img {
+        max-height: 600px;
+        margin-left: -10%;
+      }
+    }
+  }
+  #descrizione {
+    h2 {
+      padding-top: 60px;
+    }
+  }
+}
+
+@media (min-width: 1400px) {
+  #panoramica {
+    .container-fluid {
+      img {
+        margin-left: 0;
+      }
+    }
   }
 }
