--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -8,6 +8,7 @@ $palette-gris: #454444;
 $palette-red: #cd3236;
 
 $blue:    $palette-imbdur;
+$red: #DF3134;
 $fg-color: #000;
 $fg-color-primary: rgba($fg-color, 0.87);
 $fg-color-secondary: rgba($fg-color, 0.54);
