--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -26,6 +26,17 @@ body {
   background-color: $body-bg;
 }
 
+header, footer {
+    .container {
+        background-color: black;
+    }
+    background-color: black;
+}
+
+header {
+    padding-bottom: 15px;
+}
+
 .logo {
   margin-top: $marginMobile;
   &.interna {
@@ -57,9 +68,7 @@ body {
   display: block;
   width: 100%;
   height: 3px;
-  background-color: $palette-peterman;
-  margin-bottom: 1.875rem;
-  margin-top: 0.3125rem;
+  background-color: $red;
   &.interna {
     margin-top: 15px;
     margin-bottom: 15px;
@@ -165,9 +174,9 @@ body {
     text-transform: uppercase;
   }
 
-  .navbar, .nav-link {
+.navbar, a.nav-link  {
     color: white;
-  }
+}
 
 
 
