--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -146,7 +146,7 @@ header {
     color: $text-color;
   }
 
-  p {
+  p, .paragrafo {
     font-family: $font-family;
     font-weight: 400;
     font-size: $font-size-p;
