--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -498,6 +498,29 @@ header {
 
 }
 
+#button16 {
+    a {
+        display: inline-block;
+        width: 100%;
+        background-color: $red;
+        color: white;
+        text-align: center;
+        padding: 1rem 2rem;
+        margin-bottom: 1rem;
+        text-transform: uppercase;
+    }
+}
+
+#accordionExample {
+    margin: 60px 0;
+    .card-header {
+        background-color: $red;
+    }
+    .btn-link {
+        color: white;
+        text-decoration: none;
+    }
+}
 
 
 // Small devices (landscape phones, 576px and up)
