--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -522,6 +522,12 @@ header {
     }
 }
 
+.premio {
+    td {
+        font-weight: 700;
+    }
+}
+
 
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
